# sugar-aod-studio

./: .gitignore  README.md  pyproject.toml
aodstudio/: __init__.py
aodstudio/core/: __init__.py  licenses.py  projects.py  spec.py
aodstudio/generation/: __init__.py  codegen.py  generator.py  pipeline.py  prompts.py  rag.py  refine.py  templates.py  validator.py
aodstudio/llm/: __init__.py  credentials.py  enhance.py  providers.py
aodstudio/model/: __init__.py  aodcodegen.py  aodflatpak.py  aodgenerator.py  aodjobs.py  aodllm.py  aodpipeline.py  aodprojects.py  aodprompts.py  aodqueue.py  aodservice.py  aodsessions.py  aodvalidator.py
aodstudio/packaging/: __init__.py  flatpak.py
aodstudio/preview/: __init__.py  runner.py
aodstudio/service/: __init__.py  (+3 more)
core/: spec.py
docs/: ARCHITECTURE.md
generation/: codegen.py  generator.py  icons.py  pipeline.py  runtime_check.py  runtime_harness.py  templates.py  validator.py
llm/: clarify.py  enhance.py
service/: jobs.py  service.py
tests/: test_aodcredentials.py  test_aodflatpak.py  test_aodgenerator.py  test_aodllm.py  test_aodpipeline.py  test_aodpreview.py  test_aodprojects.py  test_aodprompts.py  test_aodrag.py  test_aodrefine.py  test_aodservice.py  test_aodspec.py  test_aodvalidator.py  test_credentials.py  test_enhance.py  test_flatpak.py  test_generator.py  test_icons.py  test_pipeline.py  test_preview.py  test_projects.py  test_prompts.py  test_providers.py  test_rag.py  test_refine.py  test_runtime.py  test_service.py  test_spec.py  test_studio.py  test_validator.py
ui/: panel.py  theme.py
(+4 files in other folders)
